force-app/main/default/objects/Power_supply__c/Power_supply__c.object-meta.xml
<CustomObject>
    <label>Power supply</label>
    <nameField>
        <label>Power Supply Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Power supplies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>