force-app/main/default/objects/Power_supply__c/fields/Cooling_system__c.field-meta.xml
<CustomField>
    <fullName>Cooling_system__c</fullName>
    <label>Cooling system</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Inner</fullName>
                <isActive>false</isActive>
                <label>Inner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>