force-app/main/default/objects/Power_supply__c/fields/Formfactor__c.field-meta.xml
<CustomField>
    <fullName>Formfactor__c</fullName>
    <label>Formfactor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>