force-app/main/default/objects/Power_supply__c/fields/Maximum_noise_level__c.field-meta.xml
<CustomField>
    <fullName>Maximum_noise_level__c</fullName>
    <label>Maximum noise level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>