force-app/main/default/objects/Power_supply__c/fields/Number_of_power_connectors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_power_connectors__c</fullName>
    <label>Number of  power connectors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>